# raytracer-rust

./: Cargo.toml  README.md
rt/: Cargo.toml
rt/src/: lib.rs  main.rs
rt/src/bounding_box/: aabb.rs  bvh.rs
rt/src/buffer/: buffer.rs  mod.rs  types.rs
rt/src/camera/: aspect_ratios.rs  camera.rs  mod.rs  types.rs
rt/src/colors/: input.rs  mod.rs  procedural.rs  ramp.rs  types.rs
rt/src/common/: constants.rs  dummy_utils.rs  enums.rs  file.rs  helpers.rs  id.rs  mod.rs  obj_types.rs  params.rs  primitive.rs  rand.rs  stats.rs  transform.rs  types.rs  volume.rs
rt/src/entry/: exec.rs  mod.rs
rt/src/error/: error.rs  kinds.rs  mod.rs
rt/src/geometry/: geometry.rs  helpers.rs  mod.rs  procedural.rs
rt/src/index/: index.rs
rt/src/light/: ambient_light.rs  area_light.rs  deserializers.rs  directional_light.rs  light.rs  mod.rs  point_light.rs  types.rs
rt/src/matrix/: column_major_trait.rs  m2x2.rs  m3x3.rs  m4x4.rs  mod.rs
rt/src/object/: geometry.rs  helpers.rs  mod.rs  procedural.rs
rt/src/quaternion/: mod.rs  quaternion.rs
rt/src/ray/: mod.rs  ray_context.rs  tracer.rs  types.rs
rt/src/render/: mod.rs  pass.rs  renderer.rs  types.rs
rt/src/scene/: deserializers.rs  environment.rs  imports.rs  metadata.rs  mod.rs  obj_importer.rs  render_attributes.rs  render_settings.rs  scene.rs  serializers.rs
rt/src/shader/: face_shader.rs  flat.rs  lambert.rs  mod.rs  phong.rs  shader.rs  wireframe.rs
rt/src/tests/: dummy_multi_object_scene.rs  dummy_renders.rs  lights_and_multi_object_scene.rs  mocks.rs  mod.rs  room_and_spheres.rs  scene_001.rs  (+4 more)
(+17 files in other folders)
