[package]
name = "rt"
version = "0.1.0"
edition = "2024"
authors = ["Mostafa Talebi <most.talebi@gmail.com>"]
homepage = "https://github.com/mostafatalebi"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
typetag = "0.2.21"
syn = "2"
zeroable_vec = { path = "../macros/zeroable_vec" }
image = "0.25.10"
rand = "0.8"
log = "0.4.29"
uuid = {  version = "1.23.1", features = ["v4"] }
dyn-clone = "1.0.20"
rayon = "1.12.0"
crossterm = "0.29.0"
egui = "0.34.3"
glfw = "0.62.0"
eframe = "0.34.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "raytracer"
path = "src/main.rs"
